--- a/index.html
+++ b/index.html
@@ -185,13 +185,14 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
 
             <h2 id="bio">Projects</h2>
 
-                            <p>Only active projects are described here. For a full list of publications see <a href="http://dblp.uni-trier.de/pers/hd/x/Xing:Frank_Z=">DBLP</a>.</p>
+                            <p>Only active projects and their relevant publications are described here. For a full list of publications see <a href="http://dblp.uni-trier.de/pers/hd/x/Xing:Frank_Z=">DBLP</a>.</p>
 
                 <div class="item">
-                    <h3>Intelligent Bayesian Asset Allocation</h3>
+                    <h3>AI and Financial Markets</h3>
                     <img src="images/mktvw.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
-                    <p>The fast spread of information across social media have made managing global assets increasingly risky and challenging. Classic asset allocation methods relied on financial experts' experience, but overlooked public opinions and sentiment. Inspired by the idea of collective intelligence, this project leverages on sentic computing to monitor public moods, and further fuses the asset pricing model. Simulations suggest iBAA to be a powerful approach to investment.</p>
+                    <p>The fast spread of information across news and social media have made financial markets increasingly volatile. Traditional models in finance, developed decades ago, has overlooked public opinions and sentiment. This project leverages on NLP methods to monitor public moods and discussions, and further includes this new information to the price forecasting and asset allocation models.</p>
                     <ul style="list-style-type:square">
+		      <li>Xing, F. Z.; Hoang, D.-H.; Vo, D.-V. (2021). <a href="http://">High-frequency news sentiment and its application to forex market prediction</a>. <i>Pre-print</i> </li>
                       <li>Xing, F. Z.; Cambria, E.; Zhang, Y. (2019). <a href="http://www.sciencedirect.com/science/article/abs/pii/S0950705119301546">Sentiment-Aware Volatility Forecasting</a>. <i>Knowledge-Based Systems</i> 176 pp 68-76.</li>
 		      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i> 13(4) pp 25-34.</li>
                       <li>Xing, F. Z.; Cambria, E.; Malandri, L.; Vercellis, C. (2018). <a href="https://arxiv.org/pdf/1802.09911.pdf">Discovering Bayesian Market Views for Intelligent Asset Allocation</a>. <i>ECML-PKDD</i>. <a href="http://github.com/fxing79/ibaa">[data]</a> <a href="http://github.com/fxing79/ibaa">[code]</a></li>
@@ -210,15 +211,16 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                   <div class="item">
                     <h3>Financial Knowledge Engineering </h3>
                     <img src="images/dalft.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
-                    <p>Language in financial domain is characterized by its frequent use of jargons and commonsense knowledge. Numbers, time expressions, and arguments, which are trivial in general domain without context play an important role in understanding financial texts. This project combines the top-down ontology construction approach and bottom-up machine learning techniques to build a knowledge base for financial analysis and reasoning.</p>
+                    <p>Language in financial domain is characterized by its frequent use of jargons and commonsense knowledge. Numbers, time expressions, and arguments, which are trivial in general domain without context play an important role in understanding financial texts. This project endeavors to combine the top-down ontology construction approach and bottom-up machine learning techniques to build a knowledge base for financial analysis and reasoning.</p>
                       <ul style="list-style-type:square">
+		      <li>Cambria, E.; Li, Y.; Xing, F.Z., Poria, S.; Kwok, K. (2020). <a href="https://sentic.net/senticnet-6.pdf">SenticNet 6: Ensemble Application of Symbolic and Subsymbolic AI for Sentiment Analysis.</a>. <i>CIKM</i>.</li>     
                       <li>Xing, F. Z.; Pallucchini, F.; Cambria, E. (2019). <a href="http://doi.org/10.1016/j.ipm.2018.11.002">Cognitive-Inspired Domain Adaptation of Sentiment Lexicons</a>. <i>Information Processing & Management</i> 56(3) pp 554-564. <a href="http://github.com/fxing79/Cognitive-inspired-domain-adaptation">[code]</a></li>
                       <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="https://link.springer.com/article/10.1007/s10462-017-9588-9">Natural Language based Financial Forecasting: A Survey</a>. <i>Artificial Intelligence Review</i> 50(1) pp 49–73.</li>
                     </ul>
                 </div>
 
                   <div class="footer">
-                  &copy; 2019 Frank Xing, also a clarinettist.<br />
+                  &copy; 2020 Frank Xing, also a clarinettist.<br />
                   <!--visitors-->
                   <a href="http://info.flagcounter.com/QLtL"><img src="http://s09.flagcounter.com/map/QLtL/size_t/txt_000000/border_000000/pageviews_0/viewers_Visitors/flags_0/" alt="Flag Counter" border="0"></a>
                   </div>
