--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Frank | Root</title>
+        <title>Frank Xing| Root Node</title>
 
         <link rel="stylesheet" href="stylesheets/syntax.css">
 
@@ -190,11 +190,11 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                 <div class="item">
                     <h3>AI and Financial Markets</h3>
                     <img src="images/mktvw.png" style="float:left; margin: 0em 1em 0em 0em;" width="140px" height="140px"/>
-                    <p>The fast spread of information across news and social media have made financial markets increasingly volatile. Traditional models in finance, developed decades ago, has overlooked public opinions and sentiment. This project leverages on sentic computing and other NLP methods to monitor public moods and discussions. This new information is further integrated to the stock/forex price prediction and asset allocation models.</p>
+                    <p>The fast spread of information across news and social media have made financial markets increasingly volatile. Traditional models in finance, developed decades ago, has overlooked public opinions and sentiment. This project leverages on sentic computing and other NLP methods to monitor public moods and discussions. This new information is further integrated to the stock/forex price prediction and asset allocation models to help improve them.</p>
                     <ul style="list-style-type:square">
 		      <li>Xing, F. Z.; Hoang, D.-H.; Vo, D.-V. (2021). <a href="http://">High-frequency news sentiment and its application to forex market prediction</a>. <i>Pre-print</i> </li>
                       <li>Xing, F. Z.; Cambria, E.; Zhang, Y. (2019). <a href="http://www.sciencedirect.com/science/article/abs/pii/S0950705119301546">Sentiment-Aware Volatility Forecasting</a>. <i>Knowledge-Based Systems</i> 176 pp 68-76.</li>
-		      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i> 13(4) pp 25-34.</li>
+		      <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="http://sentic.net/market-sentiment-views.pdf">Intelligent Bayesian Asset Allocation via Market Sentiment Views</a>. <i>IEEE Computational Intelligence Magazine</i> 13(4) pp 25-34. <a href="http://github.com/fxing79/ECM-LSTM">[code]</a></li>
                       <li>Xing, F. Z.; Cambria, E.; Malandri, L.; Vercellis, C. (2018). <a href="https://arxiv.org/pdf/1802.09911.pdf">Discovering Bayesian Market Views for Intelligent Asset Allocation</a>. <i>ECML-PKDD</i>. <a href="http://github.com/fxing79/ibaa">[data]</a> <a href="http://github.com/fxing79/ibaa">[code]</a></li>
 		      <li>Malandri, L; Xing, F. Z.; Orsenigo, C.; Vercellis, C.; Cambria, E. (2018). <a href="http://link.springer.com/article/10.1007/s12559-018-9609-2">Public Mood-Driven Asset Allocation: the Importance of Financial Sentiment in Portfolio Management</a>. <i>Cognitive Computation</i> 10(6) pp 1167–1176.</li>
                     </ul>
