--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ function collapse(divid) {
  		<h1 id="name">Frank Xing, PhD</h1>
     <hr>
 
-      <p><img class="profilepic" src="images/happyicon-300*300.png" /></p>
+      <p><img class="profilepic" src="images/happy570.jpg" /></p>
 			<p><br />
       <br />
 
@@ -221,7 +221,7 @@ V23c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V41z"/></g></svg>
                 </div>
 
                   <div class="footer">
-                  &copy; 2020 Frank Xing, also a clarinettist.<br />
+                  &copy; 2021 Frank Xing, also a clarinettist.<br />
                   <!--visitors-->
                   <a href="http://info.flagcounter.com/QLtL"><img src="http://s09.flagcounter.com/map/QLtL/size_t/txt_000000/border_000000/pageviews_0/viewers_Visitors/flags_0/" alt="Flag Counter" border="0"></a>
                   </div>
