--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="stylesheets/syntax.css">
 
         <link rel="stylesheet" href="stylesheets/stylesheet.css">
-        <link rel="shortcut icon" href="images/happyicon-300*300.png">
+        <link rel="shortcut icon" href="images/happy570.jpg">
         <Script>
 function collapse(divid) {
     var x = document.getElementById(divid);
