--- a/group.html
+++ b/group.html
@@ -45,14 +45,14 @@
       <p>
 
     The petite FIKE (<b>F</b>inancial <b>I</b>nformation & <b>K</b>nowledge <b>E</b>ngineering) group, pronounced /'faɪkə/, is an initiative led by Frank Xing to tackle the IT challendges for the finance industry in the 21st century. 
+    </br>
+    <img class="uncle-sam" src="images/uncle-sam.jpg" /></br>
+      Join the FIKE group @ NUS!
 
     <h2 id="core-m">Core members</h2>
     <p>
-      <img class="uncle-sam" src="images/uncle-sam.jpg" /></br>
-      Join the FIKE group @ NUS!
+    Qi Qi (PhD student @ NUS)</br>
     </p>
-
-
 
 		<h2 id="aff-m">Affiliated collaborators</h2>
     <p>
