--- a/pub.html
+++ b/pub.html
@@ -51,6 +51,7 @@
       [ <a href="https://scholar.google.com.sg/citations?hl=en&user=cSn5TrAAAAAJ">Google Scholar</a> ]
       [ <a href="http://www.scopus.com/authid/detail.uri?authorId=57196019442">Scopus</a> ]
       [ <a href="http://publons.com/researcher/1714646/frank-xing/">Publons</a> ]
+      [ <a href="http://dblp.org/pid/191/2446.html">DBLP</a> ]
       </p> 
       <br />
           <ul style="list-style-type:square">
