--- a/teaching.html
+++ b/teaching.html
@@ -44,8 +44,9 @@
 
     <h2 id="courses">Course information</h2>
     <p>
-      IS3107 Data Engineering (Spring 2022)
-      -- course material will be released here soon.
+      IS3107 Data Engineering (Spring 2022)</br>
+      
+      IS6000 Topics in Information Systems and Analytics Research (Fall 2021) <a href="https://luminus.nus.edu.sg/modules/5df47727-ed4b-4d79-adb5-56ba7d296656/lessons/0169fb71-9e1d-42bb-a390-914f2d02d5dd">[syllabus]</a>
     </p>
 
 
