--- a/group.html
+++ b/group.html
@@ -56,6 +56,7 @@
 
 		<h2 id="aff-m">Affiliated collaborators</h2>
     <p>
+      Chung-I Lu (PhD student @ NUS)</br>
       Kelvin Du (PhD student @ NTU)</br>
       Jennifer Zou (PhD student @ Harvard)</br>
       Lorenzo Malandri (Research Fellow @ Unimib)</br>
