--- a/research.html
+++ b/research.html
@@ -41,8 +41,57 @@
             	<div class="divider"></div>
             
             	<div class="contents">
-                I am currently working on several projects on "financial sentiment analysis" and "social media mining".
-                More details will be updated soon. 
+                <p>Broadly speaking, my research interests fall into four umbrellas: <a href="#u-fta">financial text analytics</a>, <a href="#u-ifm">intelligent finance models</a>, <a href="#u-kde">knowledge discovery and engineering</a>, and <a href="#u-gf">green finance</a>. Under each umbrella there are a couple of projects, some of which are, in fact, led by my students and collaborators.</p>
+
+                <div class="item">
+                  <img src="images/fta.png" style="float:left; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
+                    <h2 id="u-fta">Financial text analytics</h2>
+                    <p>Text consists of the majority of alternative data. Analyzing the versatile financial text coming from different sources, including corporate disclosures, annual reports, earning calls, financial news and social media, however, presents challenges. This thread of research designs NLP methods and investigates their adaptation to the finance domain.
+                    </p>
+                    <p>The following research questions are to be addressed:
+                        <ul style="list-style-type:square">
+                        <li>How to improve the accuracy, informativeness, and explainability of TABFSA (targeted aspect-based financial sentiment analysis)?</li>                         
+                        <li>What linguistic cues and language styles are poorly captured by current machine learning and lexicon based NLP methods?</li> 
+                        <li>How to identify noise and fake news in financial markets?</li> 
+                        </ul>
+                      </p>
+                </div>
+                <br />
+
+                <div class="item">
+                  <img src="images/ifm.png" style="float:left; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
+                    <h2 id="u-ifm">Intelligent finance models</h2>
+                    <p>This stream of research is dual to <a href="#u-fta">financial text analytics</a>: we live in a world where financial services and markets are digitalizing, providing an unprecedented amount of information to support decision-making. Traditional models in finance, developed decades ago, has overlooked such unstructured information. By leveraging on the methods developed to monitor public moods and discussions. This new information can be integrated to the financial forecasting and investing models to help improve them. Ongoing projects in this stream are:
+                        <ul style="list-style-type:square">
+                        <li>How risk aversion coefficient can be estimated from text and better support customized portfolio management?</li>                         
+                        <li>How different economic periods can be identified from public and private communications?</li> 
+                        </ul>
+                    </p>
+                </div>
+                <br />
+
+                  <div class="item">
+                  <img src="images/kde.png" style="float:left; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
+                    <h2 id="u-kde">Knowledge discovery and engineering</h2>
+                    <p>Understanding financial texts requires dealing with a lot of numbers, time expressions, and contextualized arguments, many of which are not possible without external references. Knowledge bases are often by-products of data analysis, but useful and fundamental for future ambitions if well-organized. Today, most of NLP researches benifit, directly or indirectly, from early efforts such as WordNet and DBpedia. In that sense, knowledge is both the purpose and the instrument (ct. Sukhomlinskii).
+                  </p>
+                  <p>
+                    Completed studies and IT artifacts under this umbrella include the <a href="https://aclanthology.org/W19-5501/">business classification system</a> built for the Chinese National Equities Exchange and Quotations (NEEQ) market, and a domain-specific <a href="https://doi.org/10.1016/j.ipm.2018.11.002">financial sentiment lexicon</a>. 
+                  </p>
+                </div>
+                <br />
+
+                  <div class="item">
+                  <img src="images/gf.png" style="float:left; margin: 0em 0.5em 0em 0em;" width=48% height=16%/>
+                    <h2 id="u-gf">Green finance</h2>
+                    <p>Certain economic activities and developments have negative externality: a typical example is environmental pollution, and climate change, when it becomes a global problem. The way how we use technology makes a huge difference. The first wave of IT, for instance office automation, had many good environmental impacts. But with the recent prevalence of AI, we should be cautious about low efficiency or even destructive computing. Sometimes, unregulated use can turn a powerful invention into an existential threat. Here are some questions of concern:
+                    <ul style="list-style-type:square">
+                        <li>Can text mining be used to discover and support greener and innovative ideas?</li>
+                        <li>What kind of IT development and infrastructure would promote ESG investing and financing?</li> 
+                        </ul>  
+                    </p>
+                </div>
+                <br />
 
 
             <div class="footer">
