--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <p><img class="profilepic" src="images/happy570.jpg" /></p>
       
-      <h1>Frank Xing, PhD</h1>
+      <h1>Frank Xing, PhD | 邢竹天</h1>
       <br />
       Assistant Professor
       <br />
@@ -58,7 +58,7 @@
 
 
     <h2 id="news">News</h2>
-    <p>※ August 2021: I have two <u>PhD student</u> openings (one under IPP-industrial programme with Alibaba) for the 2022 (Jan&Aug) Intake. Please check out more details <a href="https://www.comp.nus.edu.sg/programmes/pg/phdis/application/">here</a> and mention my name with your application. If you are looking for shorter-term internships though, here is the <a href="https://www.comp.nus.edu.sg/programmes/ug/project/urop/">UROP</a> scheme.</p>
+    <p>※ August 2021: I have two <u>PhD student</u> openings (one under IPP-industrial programme with Alibaba) for the 2022 Aug Intake (application deadline mid-Jan). Please check out more details <a href="https://www.comp.nus.edu.sg/programmes/pg/phdis/application/">here</a> and mention my name with your application. If you are looking for shorter-term internships though, here is the <a href="https://www.comp.nus.edu.sg/programmes/ug/project/urop/">UROP</a> scheme.</p>
 
    
 
