--- a/pub.html
+++ b/pub.html
@@ -59,11 +59,11 @@
 
           <li>Chen, X.; Xing, F.Z. (2022). <a href="https://">Financial Risk Tolerance Profiling from Text</a>. <i>Under submission</i>. <a href="http://github.com/">[data]</a> <a href="http://github.com/">[code]</a></li>
 
-          <li>Young, T.; Xing, F.Z.; Pandelea, V.; Ni, J.; Cambria, E. (2022). <a href="https://arxiv.org/abs/2109.04137">Fusing task-oriented and open-domain dialogues in conversational agents</a>. <i>AAAI</i>. <a href="http://github.com/">[data]</a></li>
+          <li>Young, T.; Xing, F.Z.; Pandelea, V.; Ni, J.; Cambria, E. (2022). <a href="https://arxiv.org/abs/2109.04137">Fusing task-oriented and open-domain dialogues in conversational agents</a>. <i>AAAI</i>. <a href="https://github.com/tomyoung903/FusedChat">[data]</a></li>
               
           <li>Xing, F.; Hoang, D.-H.; Vo, D.-V. (2021). <a href="https://scholarspace.manoa.hawaii.edu/bitstream/10125/70803/0156.pdf">High-frequency news sentiment and its application to forex market prediction</a>. <i>HICSS</i>. <a href="https://professional.dowjones.com/blog/news-sentiments-forex-market">[media]</a></li>
 
-          <li>Xing, F. Z.; Malandri, L; Zhang, Y.; Cambria, E. (2020). <a href="https://aclanthology.org/2020.coling-main.85.pdf">Financial Sentiment Analysis: No Silver Bullet and An Investigation into the Common Mistakes</a>. <i>COLING</i>. <a href="http://github.com/">[data]</a></li>  
+          <li>Xing, F. Z.; Malandri, L; Zhang, Y.; Cambria, E. (2020). <a href="https://aclanthology.org/2020.coling-main.85.pdf">Financial Sentiment Analysis: No Silver Bullet and An Investigation into the Common Mistakes</a>. <i>COLING</i>. <a href="https://frank-xing.info/fsa.zip">[data]</a></li>  
 
           <li>Cambria, E.; Li, Y.; Xing, F., Poria, S.; Kwok, K. (2020). <a href="https://sentic.net/senticnet-6.pdf">SenticNet 6: Ensemble Application of Symbolic and Subsymbolic AI for Sentiment Analysis</a>. <i>CIKM</i>.</li>
 
