--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
     <h2 id="news">News</h2>
-    <p>※ August 2021: I have two <u>PhD student</u> openings (one under IPP-industrial programme with Alibaba) for the 2022 Aug Intake (application deadline mid-Jan). Please check out more details <a href="https://www.comp.nus.edu.sg/programmes/pg/phdis/application/">here</a> and mention my name with your application. If you are looking for shorter-term internships though, here is the <a href="https://www.comp.nus.edu.sg/programmes/ug/project/urop/">UROP</a> scheme.</p>
+    <p>※ April 2022: Last minute submission to the <a href="https://www.computer.org/digital-library/journals/ta/call-for-papers-special-issue-on-neuro-symbolic-artificial-intelligence-for-sentiment-analysis">Special Issue on Neuro-symbolic AI for Sentiment Analysis</a>!</p>
 
    
 
@@ -93,7 +93,7 @@
                         </ul>
             </p>
 
-            <p onclick="collapse('ar')">※ My Erdös number is<a href="http://www.csauthors.net/distance/frank-z-xing/paul-erdos"> 3 </a>and Markowitz number is also<a href="http://www.csauthors.net/distance/frank-z-xing/harry-m-markowitz"> 3</a>.
+            <p onclick="collapse('ar')">※ My Erdös number is<a href="http://www.csauthors.net/distance/frank-z-xing/paul-erdos"> 3 </a>and Benbasat number is <a href="https://www.csauthors.net/distance/frank-z-xing/izak-benbasat"> 4</a>.
             </p>
 
 
