--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </ul>
             </p>
 
-            <p onclick="collapse('ar')">※ My Erdös number is<a href="http://www.csauthors.net/distance/frank-z-xing/paul-erdos"> 3 </a>and Benbasat number is <a href="https://www.csauthors.net/distance/frank-z-xing/izak-benbasat"> 4</a>.
+            <p onclick="collapse('ar')">※ My Erdös number is<a href="http://www.csauthors.net/distance/frank-z-xing/paul-erdos"> 3 </a>and Davis number is <a href="https://www.csauthors.net/distance/frank-z-xing/gordon-b-davis"> 4</a>.
             </p>
 
 
