--- a/pub.html
+++ b/pub.html
@@ -44,8 +44,7 @@
 
       <p>
 
-          This publication list serves the purpose of sharing supplementary materials, e.g., full-text, dataset & code, thus promoting scientific reproducability.<br />
-          Unfortunately, we (me & colleagues) ceased to attend to the overwhelming requests for non-sharable materials outside this scope.  
+          This is not a complete publication list, but a share point for supplementary materials, e.g., full-text, dataset & code, to promote scientific reproducability. 
       </p>   
       <p>
       [ <a href="https://scholar.google.com.sg/citations?hl=en&user=cSn5TrAAAAAJ">Google Scholar</a> ]
@@ -55,17 +54,12 @@
       </p> 
       <br />
           <ul style="list-style-type:square">
-          <li>Du, K.; Xing, F.Z.; Cambria, E. (2022). <a href="https://">Incorporating Multiple Knowledge Sources for Targeted Aspect-based Financial Sentiment Analysis</a>. <i>Under submission</i>.</li>
 
-          <li>Chen, X.; Xing, F.Z. (2022). <a href="https://">Financial Risk Tolerance Profiling from Text</a>. <i>Under submission</i>. <a href="http://github.com/">[data]</a> <a href="http://github.com/">[code]</a></li>
-
-          <li>Young, T.; Xing, F.Z.; Pandelea, V.; Ni, J.; Cambria, E. (2022). <a href="https://arxiv.org/abs/2109.04137">Fusing task-oriented and open-domain dialogues in conversational agents</a>. <i>AAAI</i>. <a href="https://github.com/tomyoung903/FusedChat">[data]</a></li>
+          <li>Young, T.; Xing, F.Z.; Pandelea, V.; Ni, J.; Cambria, E. (2022). <a href="https://www.aaai.org/AAAI22Papers/AAAI-626.YoungT.pdf">Fusing task-oriented and open-domain dialogues in conversational agents</a>. <i>AAAI</i>. <a href="https://github.com/tomyoung903/FusedChat">[data]</a></li>
               
           <li>Xing, F.; Hoang, D.-H.; Vo, D.-V. (2021). <a href="https://scholarspace.manoa.hawaii.edu/bitstream/10125/70803/0156.pdf">High-frequency news sentiment and its application to forex market prediction</a>. <i>HICSS</i>. <a href="https://professional.dowjones.com/blog/news-sentiments-forex-market">[media]</a></li>
 
-          <li>Xing, F. Z.; Malandri, L; Zhang, Y.; Cambria, E. (2020). <a href="https://aclanthology.org/2020.coling-main.85.pdf">Financial Sentiment Analysis: No Silver Bullet and An Investigation into the Common Mistakes</a>. <i>COLING</i>. <a href="https://frank-xing.info/fsa.zip">[data]</a></li>  
-
-          <li>Cambria, E.; Li, Y.; Xing, F., Poria, S.; Kwok, K. (2020). <a href="https://sentic.net/senticnet-6.pdf">SenticNet 6: Ensemble Application of Symbolic and Subsymbolic AI for Sentiment Analysis</a>. <i>CIKM</i>.</li>
+          <li>Xing, F. Z.; Malandri, L; Zhang, Y.; Cambria, E. (2020). <a href="https://aclanthology.org/2020.coling-main.85.pdf">Financial Sentiment Analysis: No Silver Bullet and An Investigation into the Common Mistakes</a>. <i>COLING</i>. <a href="https://frank-xing.info/fsa.zip">[data]</a></li> 
 
           <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2019). <a href="http://www.sciencedirect.com/science/article/abs/pii/S0950705118305872">Growing Semantic Vines for Robust Asset Allocation</a>. <i>Knowledge-Based Systems</i> 165 pp 297-305. <a href="http://github.com/senticnet/semantic-vine-growing">[code]</a></li>
 
@@ -79,9 +73,6 @@
 
           <li>Xing, F. Z.; Cambria, E.; Malandri, L.; Vercellis, C. (2018). <a href="https://arxiv.org/pdf/1802.09911.pdf">Discovering Bayesian Market Views for Intelligent Asset Allocation</a>. <i>ECML-PKDD</i>. <a href="http://github.com/fxing79/ibaa">[data]</a> <a href="http://github.com/fxing79/ibaa">[code]</a></li>
           
-          <li>Malandri, L; Xing, F.; Orsenigo, C.; Vercellis, C.; Cambria, E. (2018). <a href="http://link.springer.com/article/10.1007/s12559-018-9609-2">Public Mood-Driven Asset Allocation: the Importance of Financial Sentiment in Portfolio Management</a>. <i>Cognitive Computation</i> 10(6) pp 1167–1176.</li>
-
-          <li>Xing, F. Z.; Cambria, E.; Welsch, R. E. (2018). <a href="https://link.springer.com/article/10.1007/s10462-017-9588-9">Natural Language based Financial Forecasting: A Survey</a>. <i>Artificial Intelligence Review</i> 50(1) pp 49–73.</li>
           </ul>
 
 
