--- a/group.html
+++ b/group.html
@@ -52,15 +52,17 @@
     <h2 id="core-m">Core members</h2>
     <p>
     Qi Qi (PhD student @ NUS)</br>
+    Fengjun Pan (PhD student @ NUS)   
     </p>
 
 		<h2 id="aff-m">Affiliated collaborators</h2>
     <p>
       Chung-I Lu (PhD student @ NUS)</br>
       Kelvin Du (PhD student @ NTU)</br>
-      Jennifer Zou (PhD student @ Harvard)</br>
-      Lorenzo Malandri (Research Fellow @ Unimib)</br>
       Smit Patel (intern student @ NTU)
+      Jennifer Zou (PhD student @ Harvard)</br>
+      Lorenzo Malandri (Asst Prof @ Unimib)</br>
+      Jiahua Zhu (Asst Prof @ TJU)
     </p>
     
     <h2 id="alm-m">Alumni</h2>
