--- a/group.html
+++ b/group.html
@@ -52,14 +52,14 @@
     <h2 id="core-m">Core members</h2>
     <p>
     Qi Qi (PhD student @ NUS)</br>
-    Fengjun Pan (PhD student @ NUS)   
+    Fengjun Pan (PhD student @ NUS)</br>
+    Chung-I Lu (PhD student @ NUS)</br>
+    Kelvin Du (PhD student @ NTU)
     </p>
 
-		<h2 id="aff-m">Affiliated collaborators</h2>
+    <h2 id="aff-m">Affiliated collaborators</h2>
     <p>
-      Chung-I Lu (PhD student @ NUS)</br>
-      Kelvin Du (PhD student @ NTU)</br>
-      Smit Patel (intern student @ NTU)
+      Smit Patel (intern student @ NTU)</br>
       Jennifer Zou (PhD student @ Harvard)</br>
       Lorenzo Malandri (Asst Prof @ Unimib)</br>
       Jiahua Zhu (Asst Prof @ TJU)
