--- a/teaching.html
+++ b/teaching.html
@@ -44,7 +44,7 @@
 
     <h2 id="courses">Course information</h2>
     <p>
-      IS3107 Data Engineering (Fall 2022) <a href="/is3107/is3107-2syllabus.pdf">[syllabus]</a></br>
+      IS3107 Data Engineering (Fall 2022) <a href="https://canvas.nus.edu.sg/courses/25494/files/192055?module_item_id=43809">[syllabus]</a></br>
       IS3107 Data Engineering (Spring 2022) <a href="/">[syllabus]</a></br>      
       IS6000 Topics in Information Systems and Analytics Research (Fall 2021) <a href="https://luminus.nus.edu.sg/modules/5df47727-ed4b-4d79-adb5-56ba7d296656/lessons/0169fb71-9e1d-42bb-a390-914f2d02d5dd">[syllabus]</a>
     </p>
