--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
 
     <h2 id="news">News</h2>
+                  <p>※ November 2022: I am attending ICIS 2022, let's talk in Copenhagen.</p>
+                  <p>※ November 2022: I plan to have one more PhD student in my group. If you are motivated, please apply via the <a href="https://www.comp.nus.edu.sg/programmes/pg/phdis/application/">Online Portal</a>.</p>
     <p>※ April 2022: Last minute submission to the <a href="https://www.computer.org/digital-library/journals/ta/call-for-papers-special-issue-on-neuro-symbolic-artificial-intelligence-for-sentiment-analysis">Special Issue on Neuro-symbolic AI for Sentiment Analysis</a>!</p>
 
    
