--- a/pub.html
+++ b/pub.html
@@ -41,17 +41,18 @@
             	<div class="divider"></div>
             
             	<div class="contents">
-
-      <p>
-
-          This is not a complete publication list, but a share point for supplementary materials, e.g., full-text, dataset & code, to promote scientific reproducability. 
-      </p>   
+ 
       <p>
       [ <a href="https://scholar.google.com.sg/citations?hl=en&user=cSn5TrAAAAAJ">Google Scholar</a> ]
       [ <a href="http://www.scopus.com/authid/detail.uri?authorId=57196019442">Scopus</a> ]
       [ <a href="http://publons.com/researcher/1714646/frank-xing/">Publons</a> ]
       [ <a href="http://dblp.org/pid/191/2446.html">DBLP</a> ]
       </p> 
+      <br />
+      <p>
+
+          This (incomplete) list shares some supplementary research materials (e.g., full-text, dataset & code). Duplicated email request will thus be ignored. 
+      </p>
       <br />
           <ul style="list-style-type:square">
 
