--- a/index.html
+++ b/index.html
@@ -52,17 +52,13 @@
       School of Computing<br />
       National University of Singapore<br />
       <br />
-      Where to find: COM2-03-39, *or  xing(ατ)nus.edu.sg.&nbsp;&nbsp;[<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;[<a href="/cvfx.pdf">curriculum vitae</a>]<br />
+      Where to find: (physically) COM2-03-39, or (online) xing(ατ)nus.edu.sg.&nbsp;&nbsp;[<a href="https://calendar.google.com/calendar/embed?src=xingzhutian%40gmail.com&ctz=Asia%2FSingapore">calendar</a>]&nbsp;&nbsp;[<a href="/cvfx.pdf">curriculum vitae</a>]<br />
       <p>
 
 
 
     <h2 id="news">News</h2>
-                  <p>※ November 2022: I am attending ICIS 2022, let's talk in Copenhagen.</p>
-                  <p>※ November 2022: I plan to have one more PhD student in my group. If you are motivated, please apply via the <a href="https://www.comp.nus.edu.sg/programmes/pg/phdis/application/">Online Portal</a>.</p>
-    <p>※ April 2022: Last minute submission to the <a href="https://www.computer.org/digital-library/journals/ta/call-for-papers-special-issue-on-neuro-symbolic-artificial-intelligence-for-sentiment-analysis">Special Issue on Neuro-symbolic AI for Sentiment Analysis</a>!</p>
-
-   
+                  <p>※ May 2023: Three undergrad students successfully defended their theses on financial text mining and algorithmic trading. Congratulations to them!</p>
 
 
 
