--- a/group.html
+++ b/group.html
@@ -42,23 +42,22 @@
             
             	<div class="contents">
 
-      <p>
+    <p>
+    The FIKE (<b>F</b>inancial <b>I</b>nformation & <b>K</b>nowledge <b>E</b>ngineering) group, pronounced /'faɪkə/, is not a Lab, but a decentralized interest group, where Frank Xing is just its mascot.</br>
 
-    The petite FIKE (<b>F</b>inancial <b>I</b>nformation & <b>K</b>nowledge <b>E</b>ngineering) group, pronounced /'faɪkə/, is an initiative led by Frank Xing to tackle the IT challendges for the finance industry in the 21st century. 
+    The shared vision of FIKE is (1) to discover new knowledges and (2) to tackle new IT challendges, for the finance industry. 
     </br>
-    <img class="uncle-sam" src="images/uncle-sam.jpg" /></br>
-      Join the FIKE group @ NUS!
 
     <h2 id="core-m">Core members</h2>
     <p>
     Qi Qi (PhD student @ NUS)</br>
+    Guan Xing (PhD student @ NUS)</br>
     Chung-I Lu (PhD student @ NUS)</br>
-    Kelvin Du (PhD student @ NTU)
+    Kelvin Du (PhD student @ NTU)</br>
     </p>
 
     <h2 id="aff-m">Affiliated collaborators</h2>
     <p>
-      Jennifer Zou (PhD student @ Harvard)</br>
       Lorenzo Malandri (Asst Prof @ Unimib)</br>
       Jiahua Zhu (Asst Prof @ TJU)
     </p>
