--- a/index.html
+++ b/index.html
@@ -65,30 +65,262 @@
     <h2 id="bio">About me</h2>
 
     <p>
-    Frank Xing is an information scientist interested in <a href="http://web.stanford.edu/~jurafsky/slp3">natural language processing</a> and <a href="http://sentic.net/natural-language-based-financial-forecasting.pdf">predictive analytics</a>, with a special focus on <a href="https://www.aclweb.org/anthology/2020.coling-main.85/">financial applications</a>. Broadly speaking, he studies the role of human knowledge in information systems: how knowledge can be represented and engineered to support decision-making, and what consequences would knowledge-driven algorithms and systems cause to our society.</br></br>
-
-    Frank spent his boyhood in Wuhan and Beijing. He earned his bachelor's degrees in Information Systems and Economics from <a href="http://english.pku.edu.cn/">Peking University</a>, and a PhD in Computer Science and Engineering from <a href="http://scse.ntu.edu.sg/Pages/Home.aspx">Nanyang Technological University</a> with the support of Temasek Research Scholarship. After a short industrial experience with <a href="http://www.continental-corporation.com/en">Continental</a>, he was awarded the <a href="https://www.ntu.edu.sg/research/research-careers/presidential-postdoctoral-fellowship-(ppf)">NTU Presidential Postdoctoral Fellowship</a> for his systematic research on intelligent asset allocation models. In July 2021, Frank joined the NUS faculty as a Visiting Assistant Professor in the Department of Information Systems and Analytics.</br></br>
-
-    Today, Frank works closely with the <a href="https://www.aidf.nus.edu.sg/">Asian Institute of Digital Finance (AIDF)</a>, <a href="https://www.fintechsociety.comp.nus.edu.sg/">NUS Fintech Society</a>, and <a href="https://ai.nus.edu.sg/">NUS AI Lab (νSAIL)</a>. He also serves as guest editors for journals like <a href="https://cis.ieee.org/publications/ieee-transactions-on-artificial-intelligence">IEEE Transactions on Artificial Intelligence</a>, and area chairs for conferences, e.g., <a href="https://coling2020.org/">COLING</a>. His research has been featured by news media, e.g., <a href="https://professional.dowjones.com/blog/news-sentiments-forex-market">Dow Jones</a>.
+    Frank Xing is, broadly speaking, an information scientist. He lived in Wuhan, Beijing, and Hong Kong before moving to Singapore. </p>
+    <p>
+    He spends time <a href="https://www.comp.nus.edu.sg/disa/bio/fxing/">teaching at university</a>, thinking to fulfil his curiosity, and being with family.
     </p>
 
     <h2 id="fun">Fun facts</h2>
-            <p onclick="collapse('ag')">※ My academic genealogy, a.k.a. how you do research [<u>click here to expand</u>].<br />
-                        <ul class="domtree" id="ag" style="display: none">
-                            <li>
-                                Frank Xing (2019)
-                                <ul>
-                                    <li>Erik Cambria (2011)
-                                        <ul>
-                                            <li>Amir Hussain (1996) — Tariq Durrani (1970) — Jim Nightingale (?)</li>
-                                            <li>Catherine Havasi (2009) — James Pustejovsky (1984) — Edwin Williams (1974) — Noam Chomsky (1955) — Zellig Harris (1934)</li>
-                                        </ul>
-                                    </li>
-                                    <li class="2">Roy Welsch (1969) — Samuel Karlin (1947) — Salomon Bochner (1921) — Erhard Schmidt (1905) — David Hilbert (1885) — Ferdinand von Lindemann (1873) — Felix Klein (1868)
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
+            <p onclick="collapse('ag')">※ My academic genealogy (observation from history: don't be afraid to cross over) [<u>click here to expand</u>].<br />
+            <ul class="domtree" id="ag" style="display: none">
+
+              <style>
+  :root {
+    --border: 2px solid gray;
+  }
+  .middle, .last { margin-left: 1em; }
+  .middle { border-left: var(--border); }
+  .node { display: flex; }
+  .node::before {
+    border-bottom: var(--border);
+    width: 0.5em;
+    height: 0.6em;
+    display: inline-block;
+    content: "\00a0";
+  }
+  .last > .node::before {
+    border-left: var(--border);
+  }
+  .person {padding-left: 0.25em; }
+</style>
+
+<div class="node">
+  <div class="person">
+  Frank Xing (2019)
+  </div>
+</div>
+
+<div class="middle">
+  <div class="node">
+    <div class="person">
+    Erik Cambria (2011)
+    </div>
+  </div>
+
+  <div class="middle">
+  <div class="node">
+    <div class="person">
+    Amir Hussain (1996)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Tariq Durrani (1970)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Jim Nightingale (1959, prosthetic engineer)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Eric Bradshaw (1939)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Stanley Parker Smith (1907, electrical engineer)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    <a href="https://en.wikipedia.org/wiki/Engelbert_Arnold">Engelbert Arnold</a> (1883, electrical engineer)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Carl Ludwig Moll (1852)
+    </div>
+  </div>
+
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    <a href="https://www.sciencedirect.com/science/article/abs/pii/S0094114X09000925">Ferdinand Redtenbacher</a> (1829, mechanical engineer)
+    </div>
+  </div>
+
+
+  <div class="middle">
+  <div class="node">
+    <div class="person">
+    <a href="https://www.geschichtewiki.wien.gv.at/Johann_Arzberger">Johann Arzberger</a> (1816, 'techniker')
+    </div>
+  </div>
+</div>
+
+  <div class="last">
+  <div class="node">
+  <div class="person">
+  Andreas von Ettingshausen (1817, mathematician)
+  </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+  </div>
+
+
+
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  </div>
+</div>
+
+  <div class="last">
+      <div class="node">
+        <div class="person">
+        Catherine Havasi (2009)
+        </div>
+      </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    <a href="https://en.wikipedia.org/wiki/James_Pustejovsky">James Pustejovsky</a> (1984, computer scientist)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Edwin Williams (1974, linguist)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    <a href="https://en.wikipedia.org/wiki/Noam_Chomsky">Noam Chomsky</a> (1955, linguist)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Zellig Harris (1934)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    James Alan Montgomery (1904, orientalist)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Hermann Volrath Hilprecht (1883, archaeologist)
+    </div>
+  </div>
+
+
+
+</div>
+</div>
+</div> 
+</div>
+</div>
+</div>
+</div>
+
+
+
+
+</div>
+
+<div class="last">
+      <div class="node">
+        <div class="person">
+        Roy Welsch (1969)
+        </div>
+      </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Samuel Karlin (1947)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Salomon Bochner (1921)
+    </div>
+  </div>
+
+<div class="last">
+  <div class="node">
+    <div class="person">
+    Erhard Schmidt (1905)
+    </div>
+  </div>
+
+  <div class="last">
+  <div class="node">
+    <div class="person">
+    <a href="https://en.wikipedia.org/wiki/David_Hilbert">David Hilbert</a> (1885, mathematician)
+    </div>
+  </div>
+
+  <div class="last">
+  <div class="node">
+    <div class="person">
+    Ferdinand von Lindemann (1873, mathematician)
+    </div>
+  </div>
+
+  <div class="last">
+  <div class="node">
+    <div class="person">
+    <a href="https://en.wikipedia.org/wiki/Felix_Klein">Felix Klein</a> (1868, mathematician)
+    </div>
+  </div>
+
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+
+            </ul>
             </p>
 
             <p onclick="collapse('ar')">※ My Erdös number is<a href="http://www.csauthors.net/distance/frank-z-xing/paul-erdos"> 3 </a>and Davis number is <a href="https://www.csauthors.net/distance/frank-z-xing/gordon-b-davis"> 4</a>.
