--- a/group.html
+++ b/group.html
@@ -43,9 +43,13 @@
             	<div class="contents">
 
     <p>
-    The FIKE (<b>F</b>inancial <b>I</b>nformation & <b>K</b>nowledge <b>E</b>ngineering) group, pronounced /'faɪkə/, is not a Lab, but a decentralized interest group, where Frank Xing is just its mascot.</br>
-
-    The shared vision of FIKE is (1) to discover new knowledges and (2) to tackle new IT challendges, for the finance industry. 
+    The FIKE (Financial Information & Knowledge Engineering) group,</br>
+    pronounced /'faɪkə/, is <b>not</b> a Lab,</br>
+    but a decentralized interest group conceived by Frank Xing.</br>
+</br>
+    The shared mission of FIKE is to:</br>
+    (1) advance understanding of finance in the digital era, by research, and</br>
+    (2) solve IT challendges for the finance industry. 
     </br>
 
     <h2 id="core-m">Core members</h2>
@@ -56,7 +60,7 @@
     Kelvin Du (PhD student @ NTU)</br>
     </p>
 
-    <h2 id="aff-m">Affiliated collaborators</h2>
+    <h2 id="aff-m">Collaborators</h2>
     <p>
       Lorenzo Malandri (Asst Prof @ Unimib)</br>
       Jiahua Zhu (Asst Prof @ TJU)
