--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
     <h2 id="bio">About me</h2>
 
     <p>
-    Frank Xing is, broadly speaking, an information scientist. He lived in Wuhan, Beijing, and Hong Kong before moving to Singapore. </p>
+    I am, broadly speaking, an information scientist. I lived in Wuhan, Beijing, and Hong Kong before moving to Singapore. </p>
     <p>
-    He spends time <a href="https://www.comp.nus.edu.sg/disa/bio/fxing/">teaching at university</a>, thinking to fulfil his curiosity, and being with family.
+    I spend time <a href="https://www.comp.nus.edu.sg/disa/bio/fxing/">teaching</a>, thinking, and being with family.
     </p>
 
     <h2 id="fun">Fun facts</h2>
