--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
 
     <h2 id="news">News</h2>
+              <p>※ Dec 2023: See you in Hyderabad ;)</p>
                   <p>※ May 2023: Three undergrad students successfully defended their theses on financial text mining and algorithmic trading. Congratulations to them!</p>
 
 
