--- a/pub.html
+++ b/pub.html
@@ -64,7 +64,11 @@
           For a complete list of publications, please see [<a href="/cvfx.pdf">curriculum vitae</a>]. 
       </p>
 
-      <h2>Resources</h2>
+      <h2>Data & Resources</h2>
+      <a href="https://github.com/fxing79/FusedChat">FusedChat</a>: a dataset for training mixed-purpose dialogue systems<br />
+      <a href="https://frank-xing.info/fsa.zip">StockSen</a>: a dataset for benchmarking financial sentiment analysis accuracy<br />
+      <a href="http://github.com/SenticNet/neeq-annual-reports/">NEEQ Annual Reports Data</a>: company profiles from the Chinese National Equities Exchange and Quotations system<br />
+      <a href="https://frank-xing.info/f-sn.zip">FinSenticNet</a>: a concept-level financial sentiment dictionary<br />    
       <a href="https://sentic.net/senticnet.zip">SenticNet-7</a>: a concept-level sentiment information knowledge base<br />
 
 
@@ -75,12 +79,6 @@
 
       <a href="https://github.com/senticnet/semantic-vine-growing">Semantic-vine-growing</a>: an implementation of this <a href="https://www.sciencedirect.com/science/article/abs/pii/S0950705118305872">algorithm</a>
 
-      <h2>Data</h2>
-      <br />
-
-      <a href="https://github.com/fxing79/FusedChat">FusedChat</a>: a dataset for training mixed-purpose dialogue systems<br />
-      <a href="https://frank-xing.info/fsa.zip">StockSen</a>: a dataset for benchmarking financial sentiment analysis accuracy<br />
-      <a href="http://github.com/SenticNet/neeq-annual-reports/">NEEQ Annual Reports Data</a>: company profiles from the Chinese National Equities Exchange and Quotations system<br />
 
 
             <div class="footer">
